- Design bux fix: Scrollbar on the demo pages.

--- a/demo/css/style.less
+++ b/demo/css/style.less
@@ -1,8 +1,6 @@
 @import "../../lesshat";
 
 html, body {
-    width: 100%;
-    height: 100%;
     min-height: 100%;
     margin:0px;
     padding: 0px;
